--- a/ejesUNAM.html
+++ b/ejesUNAM.html
@@ -17,7 +17,7 @@
     <link href="css/styles.css" rel="stylesheet" />
 
     <!-- Favicon -->
-    <link href="https://nubecolectiva.com/favicon.ico" rel="icon" />
+    <link href="logos/favicon.jpeg" rel="icon" />
 
     <!-- Font Awesome -->
     <link
@@ -107,6 +107,19 @@
       </div>
 
       <!-- Todos los Servicios -->
+
+      <p class="textos-pag Parr-Ejes">
+        La realización efectiva de acciones y proyectos en la UIG-FI se apoya en 
+        una sinergia de esfuerzos entre diversos actores clave. En este sentido, 
+        la colaboración se erige como un pilar fundamental para lograr el éxito 
+        en la consecución de objetivos. Estos tres ejes, que engloban una amplia 
+        gama de actividades y metas en la UIG-FI, requieren de una estrecha cooperación 
+        entre múltiples entidades y grupos interesados. Entre ellos, destacan la CINIG, 
+        las POC ́s, la Defensoría de los Derechos Universitarios, el área psicológica y 
+        la comunidad génerodiversa. La conjunción de estos elementos es esencial para 
+        impulsar y fortalecer las acciones de la UIG-FI, garantizando así un ambiente 
+        inclusivo, diverso y equitativo en el ámbito universitario.
+      </p>
 
       <div class="EJES-UIG">
         <img src="img/ejesUIG.png" alt="Ejes UIG" />
