--- a/espacio.html
+++ b/espacio.html
@@ -14,7 +14,7 @@
     <link href="css/styles.css" rel="stylesheet"/>
 
     <!-- Favicon -->
-    <link href="https://nubecolectiva.com/favicon.ico" rel="icon"/>
+    <link href="logos/favicon.jpeg" rel="icon"/>
 
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" rel="stylesheet"/>
@@ -59,45 +59,13 @@
 
     <div style="margin-top: 190px;">
         <div class="row mt-5">
-          <!-- cuestionario google--> 
-          <div class="row mt-5 ms-4">
-            <div class="col-md-6 offset-md-3 mb-4">
-              <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe5IgD1pwuH4Sm7pOaXoIjK6-O0aetc40HD4u6KITzeaLD7VQ/viewform?embedded=true" width="640" height="1000" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
-            </div>
+          <div class="col-md-12 text-center">
+            <a href="https://www.gestion.defensoria.unam.mx:8443/ords/unam_duge/r/formulario-web/editar-formulario-web-g%C3%A9nero" class="btn btn-primary custom-button" target="_blank">Contáctanos</a>
           </div>
         </div>
       </div>
-          
-          <!-- Formulario 
-          <div class="container">
-            <div class="col-md-6 ms-4 mb-4">
-              <h4 class="mb-4">Buzon de Contacto</h4>
-              <form>
-                <div class="mb-3">
-                  <label for="nya" class="form-label txt_negrita">Nombres y Apellidos</label>
-                  <input type="text" class="form-control" id="nya" aria-describedby="nyaHelp" required>
-                  <div id="nyaHelp" class="form-text">Ejemplo: Carlos Torres Rojas</div>
-                </div>
-                <div class="mb-3">
-                  <label for="email" class="form-label txt_negrita">Email</label>
-                  <input type="email" class="form-control" id="email" aria-describedby="emailHelp" required>
-                  <div id="emailHelp" class="form-text">Ejemplo: miemail@mail.com</div>
-                </div>
-                <div class="mb-3">
-                  <label for="asunto" class="form-label txt_negrita">Asunto</label>
-                  <input type="text" class="form-control" id="asunto" aria-describedby="asuntoHelp" required>
-                  <div id="asuntoHelp" class="form-text">Ejemplo: Asesoría</div>
-                </div>
-                <div class="mb-3">
-                  <label for="mensaje" class="form-label txt_negrita">Mensaje</label>
-                  <textarea class="form-control" id="mensaje" rows="3" required></textarea>               
-                </div>
-                <button type="submit" class="btn btn-primary">Aceptar</button>
-              </form>
-            </div> 
-          </div>--> 
-
-      <div class="container text-center">
+           
+      <div class="container text-center" style="margin-top: 50px;">
         <h4 class="mb-4">Datos de Contacto</h4>
           <div class="row">
             <div class="col-md-6"> 
