--- a/recursos.html
+++ b/recursos.html
@@ -17,7 +17,7 @@
     <link href="css/styles.css" rel="stylesheet" />
 
     <!-- Favicon -->
-    <link href="https://nubecolectiva.com/favicon.ico" rel="icon" />
+    <link href="logos/favicon.jpeg" rel="icon" />
 
     <!-- Font Awesome -->
     <link
